# Brokk

./: .gitignore  .releaserc.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-ghcr.yml  release.yml
src/brokk/: __init__.py  export_tree.py  git_ops.py  manifest.py  models.py  service.py
tests/: __init__.py  conftest.py  run.sh  test_container_integration.py  test_manifest.py  test_service.py
